--- a/notebook/exploratory-data-analysis.ipynb
+++ b/notebook/exploratory-data-analysis.ipynb
@@ -3,16 +3,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/KainatAzhar/heart-disease-analysis/blob/main/notebook/exploratory-data-analysis.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "v-y2Aaw_KEB8"
       },
       "source": [
@@ -35,12 +25,12 @@
       "cell_type": "code",
       "execution_count": 1,
       "metadata": {
-        "id": "BaNStMTWKEB-",
-        "outputId": "0285c0ed-c0e9-47d0-c36e-86c02aedfb54",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 469
-        }
+        },
+        "id": "BaNStMTWKEB-",
+        "outputId": "0285c0ed-c0e9-47d0-c36e-86c02aedfb54"
       },
       "outputs": [
         {
@@ -683,11 +673,11 @@
       "cell_type": "code",
       "execution_count": 2,
       "metadata": {
-        "id": "wczzYX08KEB_",
-        "outputId": "3a1b0b24-f44f-4daf-db39-fa971bbc2df5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "wczzYX08KEB_",
+        "outputId": "3a1b0b24-f44f-4daf-db39-fa971bbc2df5"
       },
       "outputs": [
         {
@@ -750,11 +740,11 @@
       "cell_type": "code",
       "execution_count": 3,
       "metadata": {
-        "id": "qW5BpjzsKECA",
-        "outputId": "6839f06b-f318-4e5a-f34d-0fe3c0cfe748",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "qW5BpjzsKECA",
+        "outputId": "6839f06b-f318-4e5a-f34d-0fe3c0cfe748"
       },
       "outputs": [
         {
@@ -803,12 +793,12 @@
       "cell_type": "code",
       "execution_count": 4,
       "metadata": {
-        "id": "R9Rk7772KECB",
-        "outputId": "fde48005-a2e8-4958-ab10-4eb3b006d97f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 501
-        }
+        },
+        "id": "R9Rk7772KECB",
+        "outputId": "fde48005-a2e8-4958-ab10-4eb3b006d97f"
       },
       "outputs": [
         {
@@ -1197,12 +1187,12 @@
       "cell_type": "code",
       "execution_count": 8,
       "metadata": {
-        "id": "92gshX30KECC",
-        "outputId": "d7acc304-e565-4b55-ee8e-be71dcd3c36b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 472
-        }
+        },
+        "id": "92gshX30KECC",
+        "outputId": "d7acc304-e565-4b55-ee8e-be71dcd3c36b"
       },
       "outputs": [
         {
@@ -1242,12 +1232,12 @@
         "df.head()"
       ],
       "metadata": {
-        "id": "RhZmEkjUM6gN",
-        "outputId": "60838dda-b58f-4315-e2c4-3b912516e4fb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 296
-        }
+        },
+        "id": "RhZmEkjUM6gN",
+        "outputId": "60838dda-b58f-4315-e2c4-3b912516e4fb"
       },
       "execution_count": 9,
       "outputs": [
@@ -1652,12 +1642,12 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "yOi7oiuENrMS",
-        "outputId": "2404b9ea-8294-4b8e-8461-fd27f0480770",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 472
-        }
+        },
+        "id": "yOi7oiuENrMS",
+        "outputId": "2404b9ea-8294-4b8e-8461-fd27f0480770"
       },
       "execution_count": 10,
       "outputs": [
@@ -1701,11 +1691,11 @@
         "print(df.isnull().sum())"
       ],
       "metadata": {
-        "id": "qIVjxbNIOAvE",
-        "outputId": "89a0cdfc-abe5-4994-ea57-be34de25e448",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "qIVjxbNIOAvE",
+        "outputId": "89a0cdfc-abe5-4994-ea57-be34de25e448"
       },
       "execution_count": 12,
       "outputs": [
@@ -1782,12 +1772,12 @@
         "X.head()"
       ],
       "metadata": {
-        "id": "7up9kflwOCbd",
-        "outputId": "724dc7f9-e9e8-49a0-c875-60e54700ad40",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 556
-        }
+        },
+        "id": "7up9kflwOCbd",
+        "outputId": "724dc7f9-e9e8-49a0-c875-60e54700ad40"
       },
       "execution_count": 14,
       "outputs": [
@@ -2206,11 +2196,11 @@
         "print(confusion_matrix(y_test, y_pred))"
       ],
       "metadata": {
-        "id": "iLyUryyHOv9A",
-        "outputId": "7118a59c-98c9-4302-a17b-47863d013d57",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "iLyUryyHOv9A",
+        "outputId": "7118a59c-98c9-4302-a17b-47863d013d57"
       },
       "execution_count": 17,
       "outputs": [
@@ -2260,8 +2250,7 @@
       "version": "3.9.7"
     },
     "colab": {
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     }
   },
   "nbformat": 4,
